--- a/googlekeep/googlekeeps/src/app/editlabels/editlabels.component.css
+++ b/googlekeep/googlekeeps/src/app/editlabels/editlabels.component.css
@@ -2,12 +2,10 @@
     border:1px solid black;
     height:auto;
     background-color: white;
-    display: flex;
     flex-direction: column;
 }
 .edit-labels-align{
     position:absolute; 
-    display:flex;
     justify-content: center;
     align-items: center;
     top:0px;
@@ -18,7 +16,6 @@
     pointer-events: auto;
 }
 .delete-input-done-align{
-    display:flex;
     gap:10px;
 }
 .bottom-line{
@@ -32,4 +29,8 @@
 }
 .dispflex{
     display:flex;
+}
+.editlablesalign{
+    flex-direction: column;
+    gap:20px;
 }
