--- a/googlekeep/googlekeeps/src/app/textnotecomp/textnotecomp.component.css
+++ b/googlekeep/googlekeeps/src/app/textnotecomp/textnotecomp.component.css
@@ -1,25 +1,26 @@
 .border1{
     border: 1px solid #f1f3f4;
-    /* height: 100px; */
     padding: 40px;
     width: 670px;
-   
     border-radius: 10px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 .border1:hover{
     box-shadow: rgb(14 30 37 / 12%) 0px 2px 4px 0px, rgb(14 30 37 / 32%) 0px 2px 16px 0px;
 }
 .text-note-align{
     width: 100%;
-/* height: 100%; */
-/* margin: 13px; */
-padding: 10px;
-display: flex;
-/* flex-direction: row; */
-align-items: center;
-justify-content: center;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .text-align{
     display: flex;
     justify-content: space-between;
+}
+.note-edit:focus{
+    outline:none;
 }
