--- a/googlekeep/googlekeeps/src/app/trashchild/trashchild.component.html
+++ b/googlekeep/googlekeeps/src/app/trashchild/trashchild.component.html
@@ -2,7 +2,8 @@
     
     <div class="delete-item-align">
     <div>{{deletedElement.title}}</div>
-    <div>{{deletedElement.textnote}}</div>
+    <div>{{deletedElement.textNote}}</div>
+    <div>{{deletedElement.list}}</div>
    <div class="text-align"><span class="material-symbols-outlined" (click)="deletetrashitems(deleteItems)">delete_forever</span></div>
     </div>
 </div>
