--- a/googlekeep/googlekeeps/src/app/navcomp/navcomp.component.css
+++ b/googlekeep/googlekeeps/src/app/navcomp/navcomp.component.css
@@ -2,8 +2,6 @@
     align-items: center;
     display: flex;
     width: 100%;
-    /* border-radius: 0px 20px 20px 0px;
-    padding: 18px 145px 18px 18px; */
     gap: 24px;
     padding: 14px 18px 14px 18px;;
 }
@@ -36,7 +34,7 @@ a.active{
  display:block;
 }
 .nav-comp-fontsize{
-    font-size:17px;
+    font-size:14px;
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
@@ -45,4 +43,7 @@ a.active{
 }
 .padding{
     padding-left:10px;
+}
+.text-color{
+    color: #5f6368;
 }
