--- a/medicalstore/medical3d.css
+++ b/medicalstore/medical3d.css
@@ -10,6 +10,7 @@
 body{
     width:100vw;
     height:100vh;
+    overflow-x: hidden;
 } 
 .flex{
     display: flex;
@@ -359,7 +360,12 @@ body{
     grid-template-columns:1fr 1fr 1fr 1fr;
     text-align: center;
 }
-#BillingAmount{
+/* #BillingAmount{
+    display:grid;
+    grid-auto-rows: 20px;
+    text-align: center;
+} */
+.BillingAmount{
     display:grid;
     grid-auto-rows: 20px;
     text-align: center;
